Bug 307774 - KMyMoney does not know the new Aserbaishan Manat (currency)
Summary: KMyMoney does not know the new Aserbaishan Manat (currency)
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.2
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL: http://de.wikipedia.org/wiki/Aserbaid...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-03 14:39 UTC by Stefan Seide
Modified: 2012-12-28 11:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Seide 2012-10-03 14:39:40 UTC
KMyMoney only lists the old Manat (AZM) as currency of Aserbaidshan. The new Manat (AZN), used since 2006, is not available as currency for accounts

Reproducible: Always

Steps to Reproduce:
1. create new cash account, choose base currency - AZN not available
Comment 1 Thomas Baumgart 2012-12-23 14:02:19 UTC
Work-around: use Tools/Currencies and a right mouse click to select 'New currency'. Choose AZN as the ISO code and use F2 to edit the name.
Comment 2 Thomas Baumgart 2012-12-23 14:56:33 UTC
Git commit 13d1e91640b7e01c14992f3c63f2c2c14c96088e by Thomas Baumgart.
Committed on 23/12/2012 at 15:55.
Pushed by tbaumgart into branch '4.6'.

Added definition for new Azerbaijani Manat

M  +4    -1    kmymoney/views/kmymoneyview.cpp

http://commits.kde.org/kmymoney/13d1e91640b7e01c14992f3c63f2c2c14c96088e
Comment 3 allan 2012-12-26 11:14:53 UTC
(In reply to comment #1)
> Work-around: use Tools/Currencies and a right mouse click to select 'New
> currency'. Choose AZN as the ISO code and use F2 to edit the name.

Am I right in thinking that the work-around will achieve anything in this case only after the patch has been applied, as until then 'AZN' will not be known?
Comment 4 Thomas Baumgart 2012-12-26 13:52:27 UTC
No, the result of the work-around will yield the one of the patch, just with manual intervention. I should have written 'Enter AZN as the ISO code' instead of 'Choose'. It's a simple edit field and there's no choice. Is my English getting rusty? ;)
Comment 5 allan 2012-12-26 20:31:55 UTC
(In reply to comment #4)
> No, the result of the work-around will yield the one of the patch, just with
> manual intervention. I should have written 'Enter AZN as the ISO code'
> instead of 'Choose'. It's a simple edit field and there's no choice. Is my
> English getting rusty? ;)

Your English is first-class!  And, it is Christmas.
Comment 6 Stefan Seide 2012-12-28 11:56:01 UTC
Thanks - adding AZN through the currency list worked fine.
After that i was able to change all occurences of AZM to AZN within the XML file, therefor i did not had to reenter all transactions.

Happy New Year.