Added definition for new Azerbaijani Manat

BUG: 307774